--- a/projetoco1/style1.css
+++ b/projetoco1/style1.css
@@ -28,6 +28,25 @@ transform: scale(1.1);
 transition: 1s ease;
 }
 
+.growm img{
+transition: 1s ease;
+}
+
+.growm img:hover{
+-webkit-transform: scale(1.1);
+-ms-transform: scale(1.1);
+transform: scale(1.2);
+transition: 1s ease;
+}
+
 .nice{
   font-size: 250%;
+}
+
+.parallax-container {
+  height:600px;
+}
+
+.teamphoto {
+  height:350px;
 }
