--- a/projetoco1/style1.css
+++ b/projetoco1/style1.css
@@ -3,6 +3,7 @@
 }
 
 
+
 .center {
    position: absolute;
    top: 45%;
@@ -78,11 +79,34 @@ transition: 1s ease;
   margin-left: -175px;
 }
 .icons{
-  height: 50px;
+  height: 25px;
 }
 
 .iconlink{
   position: absolute;
-  margin-top: 17px;
+  margin-top: 0px;
   margin-left:17px;
+}
+
+.backindex{
+  background:linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("fundo.jpg");
+  height: 100%;
+  background-position: center center;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: white;
+}
+
+
+
+.intro{
+  font-size: 90px;
+  color: white;
+  text-align: center;
+  font-family: 'Armata';
+  margin-top: 460px;
+}
+
+.foto{
+  background:linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ), url("fundo.jpg");
 }
